--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "~0.1.6",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
+    "expo-facebook": "~12.1.0",
+    "expo-image-picker": "^12.0.2",
     "expo-status-bar": "~1.2.0",
     "firebase": "9.6.7",
     "lodash": "^4.17.21",
