--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "expo-camera": "~12.1.2",
     "expo-facebook": "~12.1.0",
     "expo-image-picker": "^12.0.2",
+    "expo-location": "^14.0.2",
     "expo-status-bar": "~1.2.0",
     "firebase": "9.6.7",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -28,11 +30,15 @@
     "react-native-easy-toast": "^2.0.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-get-random-values": "^1.7.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "0.29.4",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-toast-message": "^2.1.5",
+    "react-native-web": "0.17.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
