--- a/package.json
+++ b/package.json
@@ -10,17 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/masked-view": "~0.1.6",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
-    "expo-camera": "~12.1.2",
-    "expo-facebook": "~12.1.0",
+    "expo-facebook": "^12.1.1",
     "expo-image-picker": "^12.0.2",
     "expo-location": "^14.0.2",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "^0.11.6",
     "firebase": "9.6.7",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
@@ -29,7 +27,6 @@
     "react-native": "0.64.3",
     "react-native-easy-toast": "^2.0.0",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "^1.7.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "0.29.4",
@@ -39,6 +36,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.1",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
