--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.2.0",
-    "@react-navigation/native": "6.0.8",
-    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
     "expo-facebook": "^12.1.1",
     "expo-image-picker": "^12.0.2",
@@ -35,8 +35,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^2.1.5",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
-    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
