--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "expo-image-picker": "^12.0.2",
     "expo-location": "^14.0.2",
     "expo-status-bar": "~1.2.0",
-    "expo-updates": "^0.11.6",
+    "expo-updates": "~0.11.7",
     "firebase": "9.6.7",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
@@ -29,6 +29,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "0.29.4",
+    "react-native-open-maps": "^0.4.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
