--- a/app.json
+++ b/app.json
@@ -17,14 +17,27 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "SKAdNetworkItems": [
+          {
+            "SKAdNetworkIdentifier": "v9wttpbfk9.skadnetwork"
+          },
+          {
+            "SKAdNetworkIdentifier": "n38lu8286q.skadnetwork"
+          }
+        ]
+      }
     },
     "android": {
-      "permissions": ["CAMARA"],
+      "permissions": [
+        "CAMARA"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.linamikaela.LaliResto"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -36,6 +49,8 @@
           "userTrackingPermission": false
         }
       ]
-    ]
+    ],
+    "description": "",
+    "githubUrl": "https://github.com/linamikaela21/LaliRestaurantsApp"
   }
 }
